Refactored 'dependency plugins' into 'dependency providers' now added via an interface. I need to be able to query a provider for the type of the dependency in order to construct the entire dependency tree (for ordering instantiation of singletons) so a simple anonymous function isn't enough anymore.

--- a/Src/Factory.csproj
+++ b/Src/Factory.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DependencyAttribute.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="FactoryCreatableAttribute.cs" />
+    <Compile Include="IDependencyProvider.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IStartable.cs" />
     <Compile Include="LazySingletonAttribute.cs" />
