--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
  
 script:
   - xbuild ./Factory.sln
-  - mono ./xunit/xunit.console.clr4.x86.exe ./bin/debug/RSG.Factory.Tests.dll
+  - mono ./xunit/xunit.console.clr4.x86.exe ./bin/Debug/RSG.Factory.Tests.dll
