--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\examples\Example1\packages.config" />
+  <repository path="..\examples\Example10\packages.config" />
+  <repository path="..\examples\Example11\packages.config" />
+  <repository path="..\examples\Example12\packages.config" />
+  <repository path="..\examples\Example2\packages.config" />
+  <repository path="..\examples\Example3\packages.config" />
+  <repository path="..\examples\Example4\packages.config" />
+  <repository path="..\examples\Example5\packages.config" />
+  <repository path="..\examples\Example6\packages.config" />
+  <repository path="..\examples\Example7\packages.config" />
+  <repository path="..\examples\Example8\packages.config" />
+  <repository path="..\examples\Example9\packages.config" />
+  <repository path="..\Src\packages.config" />
   <repository path="..\Tests\packages.config" />
 </repositories>
