--- a/Src/Factory.nuspec
+++ b/Src/Factory.nuspec
@@ -6,12 +6,12 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://github.com/real-serious-games</licenseUrl>
-    <projectUrl>https://github.com/real-serious-games</projectUrl>
+    <licenseUrl>https://github.com/real-serious-games/factory</licenseUrl>
+    <projectUrl>https://github.com/real-serious-games/factory</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/7463833?v=2&amp;s=200</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>First release of nuget package.</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>C# Factory Dependency Injection</tags>
   </metadata>
